--- a/NIDS/UI/style.css
+++ b/NIDS/UI/style.css
@@ -1,49 +1,49 @@
 * {
     margin: 0;
     box-sizing: border-box;
-  }
-  
-  body {
+}
+
+body {
     font-family: "Roboto", sans-serif;
     background: #ecf0f1;
     color: #2c3e50;
     font-weight: bold;
-  }
-  
-  h1 {
+}
+
+h1 {
     margin: 16px 0;
     border-left: 5px solid #e74c3c;
     padding-left: 16px;
-  }
+}
 
-  h2 {
+h2 {
     margin-left: -1em;
     padding-bottom: 1.4em;
-  }
+}
 
-  .container {
+.container {
     padding: 48px;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
-  }
-  
-  .container .group {
+}
+
+.container .group {
     padding: 8px 48px;
     margin: 8px;
-  }
-  
-  input[type="checkbox"] {
+}
+
+input[type="checkbox"] {
     display: none;
-  }
-  
-  label {
+}
+
+label {
     position: relative;
     cursor: pointer;
-  }
-  
-  label::before {
+}
+
+label::before {
     content: "";
     background: url("check-circle.svg");
     background-position: center;
@@ -53,16 +53,15 @@
     position: absolute;
     left: -44px;
     top: -8px;
-  
     transform: scale(0) rotateZ(180deg);
     transition: all 0.4s cubic-bezier(0.54, 0.01, 0, 1.49);
-  }
-  
-  input[type="checkbox"]:checked + label::before {
+}
+
+input[type="checkbox"]:checked+label::before {
     transform: scale(1) rotateZ(0deg);
-  }
-  
-  label::after {
+}
+
+label::after {
     content: "";
     border: 2px solid #27ae60;
     width: 24px;
@@ -71,22 +70,62 @@
     left: -42px;
     top: -6px;
     border-radius: 50%;
-  }
-  .button {
-      border: 2px solid #27ae60;
-      display: inline-block;
-      margin-left: -2em;
-      padding: 0.5em 2em;
-      border-radius: 1em;
-      cursor: pointer;
-      box-shadow: inset 0 0 0 0 #27ae60;
-      outline: none;
-      transition: ease-out 0.3s;
-      font-weight: bold;
+}
 
-  }
-  .button:hover {
-      color: white;
-      box-shadow: inset 0 0 100px 0 #27ae60;
-  }
-  
+.button {
+    border: 2px solid #27ae60;
+    display: inline-block;
+    margin-left: -2em;
+    padding: 0.5em 2em;
+    border-radius: 1em;
+    cursor: pointer;
+    box-shadow: inset 0 0 0 0 #27ae60;
+    outline: none;
+    transition: ease-out 0.3s;
+    font-weight: bold;
+}
+
+.button:hover {
+    color: white;
+    box-shadow: inset 0 0 100px 0 #27ae60;
+}
+
+.threshold {
+    margin-top: 1em;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.2s ease-out;
+}
+
+.threshold input[type="number"] {
+    display: inline;
+    background-color: #ecf0f1;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #27ae60;
+    float: left;
+    width: auto;
+}
+
+.threshold label {
+    padding-bottom: 1em;
+    display: inline;
+    float: left;
+    font-size: small;
+    cursor: default;
+}
+
+.threshold input[type="number"]::-webkit-outer-spin-button,
+.threshold input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.error {
+    color: red;
+    margin-left: -2em;
+    font-size: small;
+    font-weight: normal;
+    visibility: hidden;
+    font-family: 'Times New Roman', Times, serif;
+}
